src/test/deca/codegen/invalid/Objet/IncorrectAssembly.deca
// Description:
//      Program whose only class uses an incorrect assembly
//
// Result:
//      ERROR: incorrect_assembly
//
// History:
//      created on 17/1/2022


class A {
    int x;

    void function()
    asm ( "svc #0
RTS" );

    int y;
}


{
    A a = new A();
}
